# Design-Patterns-GoF

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt
.github/workflows/: cmake-multi-platform.yml
Abstract_Factory/: BombedMazeFactory.cpp  BombedWall.h  Door.cpp  Door.h  DoorNeedingSpell.cpp  DoorNeedingSpell.h  EnchantedRoom.cpp  EnchantedRoom.h  MazeFactory.cpp  MazeFactory.h  MazeGame.cpp  MazeGame.h  Room.h  Wall.h
Behavioral_Patterns/: CMakeLists.txt
Behavioral_Patterns/Chain_of_Responsibility/: Application.cpp  Application.h  Button.cpp  Button.h  CMakeLists.txt  Dialog.cpp  Dialog.h  ExtendedHandler.cpp  ExtendedHandler.h  Handler.cpp  Handler.h  HelpHandler.cpp  HelpHandler.h  HelpRequest.h  PrintRequest.h  Request.h  Widget.cpp  Widget.h  chain_of_responsibility1.cpp
Behavioral_Patterns/Command/: Application.cpp  Application.h  CMakeLists.txt  Command.cpp  Command.h  Document.cpp  Document.h  MacroCommand.cpp  MacroCommand.h  MyClass.cpp  MyClass.h  OpenCommand.cpp  OpenCommand.h  PasteCommand.cpp  PasteCommand.h  SimpleCommand.h  main.cpp
Behavioral_Patterns/Iterator/: AbstractList.h  CMakeLists.txt  Employee.cpp  Employee.h  FilteringListTraverser.cpp  FilteringListTraverser.h  Iterator.h  IteratorOutOfBounds.h  IteratorPtr.h  ListIterator.cpp  ListIterator.h  ListTraverser.cpp  ListTraverser.h  PrintNEmployees.h  README.txt  ReverseListIterator.cpp  ReverseListIterator.h  SkipList.cpp  SkipList.h  SkipListIterator.cpp  SkipListIterator.h  external_iterator.cpp  internal_list_iterator.cpp  iterator1.cpp  main.cpp
Behavioral_Patterns/Observer/: AnalogClock.h  CMakeLists.txt  ClockTimer.cpp  ClockTimer.h  DigitalClock.cpp  DigitalClock.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  Widget.h
Behavioral_Patterns/Strategy/: ArrayCompositor.cpp  ArrayCompositor.h  CMakeLists.txt  Composition.cpp  Composition.h  Compositor.cpp  Compositor.h  SimpleCompositor.cpp  SimpleCompositor.h  TeXCompositor.cpp  TeXCompositor.h  main.cpp
Behavioral_Patterns/Template_Method/: Application.cpp  Application.h  CMakeLists.txt  Document.cpp  Document.h  DocumentStore.cpp  DocumentStore.h  main1.cpp
Builder/: CountingMazeBuilder.cpp  Maze.cpp  MazeBuilder.cpp  MazeBuilder.h  MazeGame.cpp  RoomWithABomb.cpp  StandardMazeBuilder.h  Wall.h  client2.cpp
Creational_Patterns/: BombedMazeFactory.h  BombedWall.cpp  CMakeLists.txt  CastSpell.h  Door.cpp  Door.h  DoorNeedingSpell.h  EnchantedMazeFactory.cpp  EnchantedMazeFactory.h  EnchantedRoom.cpp  EnchantedRoom.h  MapSite.h  Maze.cpp  Maze.h  MazeFactory.cpp  MazeFactory.h  MazeGame.cpp  MazeGame.h  MazeParts.h  Room.cpp  Room.h  RoomWithABomb.cpp  RoomWithABomb.h  Wall.cpp  Wall.h
Creational_Patterns/Abstract_Factory/: BombedMazeFactory.h  CMakeLists.txt  EnchantedMazeFactory.cpp  EnchantedMazeFactory.h  EnchantedRoom.h  Maze.cpp  Maze.h  MazeFactory.h  Room.cpp  RoomWithABomb.h  Spell.h  main.cpp
Creational_Patterns/Builder/: CMakeLists.txt  CountingMazeBuilder.cpp  CountingMazeBuilder.h  Maze.h  MazeBuilder.h  MazeGame.h  Room.cpp  Room.h  StandardMazeBuilder.cpp  StandardMazeBuilder.h  builder1.cpp  client1.cpp
Creational_Patterns/Factory_Method/: CMakeLists.txt  README.txt
Creational_Patterns/Factory_Method/parameterized_factory_methods/: CMakeLists.txt  Creator.cpp
Creational_Patterns/Factory_Method/sample_code/: CMakeLists.txt  MazeGame.cpp  MazeGame.h  main.cpp
Creational_Patterns/Factory_Method/templates_to_avoid_subclassing/: CMakeLists.txt
Creational_Patterns/Factory_Method/with_lazy_evaluation/: CMakeLists.txt
Creational_Patterns/Prototype/: BombedWall.cpp  CMakeLists.txt  Door.h  MapSite.h  Maze.cpp  Maze.h  MazeFactory.cpp  MazeFactory.h  MazeGame.cpp  MazeGame.h  MazePrototypeFactory.cpp  MazePrototypeFactory.h  Room.h  RoomWithABomb.h  prototype1.cpp
Creational_Patterns/Singleton/: CMakeLists.txt  references.txt
Creational_Patterns/Singleton/basic_implementation/: CMakeLists.txt  Singleton.cpp  Singleton.h  main.cpp
Creational_Patterns/Singleton/registry_of_singletons/: CMakeLists.txt  MySingleton.cpp  MySingleton.h  NameSingletonPair.cpp  NameSingletonPair.h  Singleton.cpp  Singleton.h  main.cpp
Creational_Patterns/Singleton/sample_code/: BombedMazeFactory.h  EnchantedMazeFactory.h
Factory_Method/parameterized_factory_methods/: Creator.cpp
Factory_Method/sample_code/: BombedMazeGame.cpp  BombedMazeGame.h  EnchantedMazeGame.h
Factory_Method/templates_to_avoid_subclassing/: Creator.cpp
Factory_Method/with_lazy_evaluation/: Creator.cpp
Foundation_Classes/: CMakeLists.txt  Coord.cpp  Coord.h  List.cpp  List.h  Point.cpp  Point.h  Rect.cpp  Rect.h
Prototype/: BombedWall.h  Door.cpp  Room.cpp  Wall.cpp  Wall.h  main.cpp
Singleton/basic_implementation/: Singleton.cpp
Singleton/registry_of_singletons/: MySingleton.h  Singleton.h
Singleton/sample_code/: MazeFactory.cpp  MazeFactory.h
Structural_Patterns/: CMakeLists.txt
Structural_Patterns/Adapter/: CMakeLists.txt  Coord.cpp  Coord.h  Manipulator.h  Point.cpp  Point.h  Shape.cpp  Shape.h  TextManipulator.cpp  TextManipulator.h  TextView.cpp  TextView.h
Structural_Patterns/Bridge/: ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  IconWindow.cpp  IconWindow.h  PMWindowImp.cpp  PMWindowImp.h  Point.h  README.txt  View.cpp  View.h  Window.cpp  Window.h  WindowImp.h  WindowSystemFactory.cpp  XWindowImp.cpp  (+2 more)
Structural_Patterns/Composite/: Bus.cpp  Bus.h  CMakeLists.txt  Cabinet.cpp  Cabinet.h  Card.cpp  Card.h  Chassis.cpp  Chassis.h  CompositeEquipment.cpp  CompositeEquipment.h  Currency.cpp  Currency.h  Equipment.cpp  Equipment.h  FloppyDisk.cpp  FloppyDisk.h  Iterator.cpp  Iterator.h  List.h  Watt.h  main.cpp
Structural_Patterns/Flyweight/: CMakeLists.txt  Character.cpp  Character.h  Column.h  Font.cpp  Font.h  Glyph.cpp  Glyph.h  GlyphContext.cpp  GlyphContext.h  GlyphFactory.cpp  GlyphFactory.h  Row.h  flyweight1.cpp
Structural_Patterns/Proxy/: CMakeLists.txt  Graphic.cpp  Graphic.h  Image.cpp  Image.h  ImageProxy.cpp  ImageProxy.h  README.txt  TextDocument.cpp  TextDocument.h  main.cpp
(+43 files in other folders)
